fix build failing